@@ -1,3 +1,6 @@
+(Graham Triggs)
+- S.F. Patch 1749196 Oracle SQL in Bitstream Checker
+
 (Larry Stone, Richard Rodgers, Sands Fish, Mark Diggory)
 - S.F. Patch 1633596 Event System for DSpace 1.5
 
